# demo-authentication

./: Cargo.toml  README.md  config.yaml
data/: employees.json  roles.json  users.json
schemas/: auth.graphql
source/: index.html  package-lock.json  package.json  vite.config.ts
source/src/: App.tsx  index.css
source/src/components/: LoginPage.css  LoginPage.tsx
source/src/pages/: AuthPage.tsx
source/src/styles/: index.css
src/: lib.rs
