# Cargo manifest for demo-authentication — Phase 48 static-crate shape.
#
# Dual-mode during the dylib → static migration window. yeti-compiler
# reads only [dependencies] when building the dylib (retiring in
# Phase 48 slice 5); cargo uses the full file when building the static
# library this crate compiles to.

[package]
name = "demo-authentication"
version = "0.1.0"
edition = "2024"
description = "Role-based access control with Basic, JWT, and OAuth login"

[lib]
name = "demo_authentication"
path = "src/lib.rs"

[workspace]

[dependencies]
yeti-sdk = { path = "../../../Developer/yeti/crates/yeti-sdk", features = ["workspace"] }
serde_json = "1"
