[package]
name = "demo-authentication"
edition = "2024"
description = "Authentication Demo"
version = "1.0.0"

[package.metadata.app]
customer_id = "yeti"
schemas = "schemas/auth.graphql"
static = { path = "web", root = "/", source = "source", spa = true, build = "npm install && npm run build" }
loaders = { data = "data/employees.json", auth = ["data/roles.json", "data/users.json"] }

[package.metadata.auth]
allow_signup = true
default_role = "viewer"

[package.metadata.auth.jwt]
enabled = true
secret = "${JWT_SECRET}"
access_ttl = 900
refresh_ttl = 604800

[package.metadata.auth.oauth]
enabled = true
providers = [
  { name = "google", client_id = "${GOOGLE_CLIENT_ID}", client_secret = "${GOOGLE_CLIENT_SECRET}" },
  { name = "github", client_id = "${GITHUB_CLIENT_ID}", client_secret = "${GITHUB_CLIENT_SECRET}" },
]
rules = [
  { strategy = "provider", pattern = "google", role = "admin" },
  { strategy = "provider", pattern = "github", role = "viewer" },
]

[dependencies]
